tests/hevm/pass/shape/shape.act
contract A

constructor(uint z)

creates
   uint x := z


transition x() : uint256

updates
returns x

transition set_x(uint z)

updates
  x := z

contract B

constructor(uint z)

creates
   uint y := z
   A a := new A(0)

transition y() : uint256

updates
returns y

transition a() : address<A>

updates
returns a


contract C

constructor(address<B> y)

creates
   A a := y.a
   B b := y
   //B b := new B(42) 

transition change()

updates
  b.a.x := 17
