tests/hevm/fail/shape/shape.act
// contract A
contract A

constructor(uint z)

iff
   CALLVALUE == 0

creates
   uint x := z


transition x() : uint256

iff
   CALLVALUE == 0

updates
returns x

transition set_x(uint z)

iff 
   CALLVALUE == 0

updates
  x := z

// contract B
contract B

constructor(uint z)
iff
   CALLVALUE == 0

creates
   uint y := z
   A a := new A(0)

transition y() : uint256

iff
   CALLVALUE == 0

updates
returns y

transition a() : address<A>

iff
   CALLVALUE == 0

updates
returns a


// contract C
contract C

constructor(address<B> y)

iff
   CALLVALUE == 0

creates
   A a := y.a
   B b := y 
